# TrialAgent

./: README.md  pyproject.toml  requirements.txt
.github/actions/poc-reusable-composite/: action.yml
.github/workflows/: poc-caller.yml  poc-composite-caller.yml  poc-reusable.yml
artifacts/: trials.jsonl
artifacts/trialagent_ieee_report/: README.md
trial_agent/: __init__.py  config.py  main.py  models.py  state.py
trial_agent/graph/: __init__.py  builder.py  nodes.py
trial_agent/io/: __init__.py  jsonl_writer.py
trial_agent/policies/: __init__.py  fallbacks.py
trial_agent/tools/: __init__.py  adapters.py  base.py
