[project]
name = "trialagent"
version = "0.1.0"
description = "Prototype AI-assisted clinical trial discovery agent"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
graph = ["langgraph>=0.2.0"]

[tool.setuptools]
packages = ["trial_agent", "trial_agent.graph", "trial_agent.tools", "trial_agent.io", "trial_agent.policies"]
